--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/rkterungwa16/bootcamp20-self-learning-clinic-day0/issues"
   },
-  "homepage": "https://github.com/rkterungwa16/bootcamp20-self-learning-clinic-day0#readme"
+  "homepage": "https://github.com/rkterungwa16/bootcamp20-self-learning-clinic-day0#readme",
+  "devDependencies": {
+    "jasmine": "^2.5.3"
+  }
 }
